ChmSee 1.0.3 2009-01-10
------------------------

interface
~~~~~~~~~

* Add "Copy Page Location" to the context menu.

l10n
~~~~

* Add Hebrew translation, thanks to Yaron.
* Add Swahili translation, thanks to Emanuel Feruzi.
* Add Bengali translation, thanks to faisal.

ChmSee 1.0.2 2008-12-03
------------------------
* Add Italian translation, thanks to Luca Livraghi.
* Add Swedish translation, thanks to Daniel Nylander.

ChmSee 1.0.1 2008-05-16
------------------------
* Support xulrunner 1.9
* Replace openssl with libgcrypt to generate MD5sum.

ChmSee 1.0.0 2007-07-23
------------------------
* Add cs2w, written by rae l <crquan@gmail.com>. It's a Python script
that can convert CHM file to web browser friendly pages.

ChmSee 1.0.0-beta2 2007-04-07
------------------------------
* Using pkg-config detect gecko support library.
* User can choose Auto-Detect Language type, it's used for some html
without charset content specified.
* Popup context menu on html contents.
* Add Zoomin, Zoomout toolbar buttons.