@@ -1,3 +1,11 @@
+ChmSee 1.0.4 XXXX-XX-XX
+------------------------
+
+Bugs
+~~~~
+
+* issue#7: different case in URI and filename.
+
 ChmSee 1.0.3 2009-01-10
 ------------------------
 
